app/frontend/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.content {
	float: left;
	width: 97%;
	margin: 0% 1.5% 1.5%;
	border-radius: 15px;
}

.content-jumbotron {
	width: 97%;
	margin: 0% 1.5% 0% 1.5%;
}

.noPadding {
	padding: 0 !important;
}

